Implementamos novas classes: Library, LibraryRepository, LibraryService, LibraryServiceimpl, e o pacote Enums e o enum LibraryStatus.